--- a/config/application.yml
+++ b/config/application.yml
@@ -11,3 +11,4 @@
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
 AWS_ACCESS_KEY_ID: "AKIAIOVL4A4EITVMOZEA"
 AWS_SECRET_ACCESS_KEY: "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"
+AWS_REGION: "us-west-2"
