--- a/config/application.yml
+++ b/config/application.yml
@@ -9,6 +9,7 @@
 # production:
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
+AWS_BUCKET: "typeaway"
 AWS_ACCESS_KEY_ID: "AKIAIOVL4A4EITVMOZEA"
 AWS_SECRET_ACCESS_KEY: "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"
 AWS_REGION: "us-west-2"
