--- a/config/application.yml
+++ b/config/application.yml
@@ -9,7 +9,6 @@
 # production:
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
-AWS_BUCKET: "typeaway"
-AWS_ACCESS_KEY_ID: "AKIAIOVL4A4EITVMOZEA"
-AWS_SECRET_ACCESS_KEY: "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"
-AWS_REGION: "us-west-2"
+AWS_BUCKET: typeaway
+AWS_ACCES_KEY_ID: AKIAJ5FO2Y2WMYQGB4QQ
+AWS_SECRET_ACCESS_KEY: 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
